--- a/index.html
+++ b/index.html
@@ -67,16 +67,17 @@
 <section id="contacto" class="section">
   <div class="container">
     <h2>Contacto</h2>
-    <p>📞 Teléfono / WhatsApp: 301 333 5008</p>
-    <p>📧 Correo: contacto@grupouraba.com</p>
-    <a class="btn" href="https://wa.me/573013335008" target="_blank">Enviar WhatsApp</a>
+    <p>📞 Teléfono / WhatsApp: 304 4579578</p>
+    <p>📧 Correo: grupourabasas@gmail.com</p>
+    <a class="btn" href="https://wa.me/573044579578" target="_blank">Enviar WhatsApp</a>
   </div>
 </section>
 
 <footer>
-  <p>© 2026 Grupo Urabá Servicios Integrales S.A.S.</p>
+  <p>©  Grupo Urabá Servicios Integrales S.A.S.</p>
 </footer>
 
 <script src="script.js"></script>
 </body>
 </html>
+
